--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@ body {
 
 button {
     cursor: pointer;
+            font-size: 16px;
+            line-height: 1.62;
+            text-align: center;
+            letter-spacing: 0.03em;
 }
 
 
@@ -33,9 +37,7 @@ button {
 .header-nav-link{
 text-decoration: none;
 font-weight: 500;
-    font-size: 14px;
-    line-height: 1.1428;
-    letter-spacing: 0.02em;
+    
     
     
     }
@@ -70,9 +72,6 @@ list-style: none;
 .header-nav-link:focus,
 .header-contact-link:hover,
 .header-contact-link:focus{
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
    color: var(--color-accent);
    
     
@@ -82,6 +81,7 @@ list-style: none;
 .hero-btn{
     font-family: 'Roboto';
     font-style: normal;
+    font-weight: 700;
     padding: 10px 28px;
     border: none;
     border-radius: 4px;
@@ -180,13 +180,24 @@ list-style: none;
 
 .filters-btn:hover,
 .filter-btn:focus {
-      font-weight: 500;
-        font-size: 16px;
-        line-height: 1.62;
-        text-align: center;
-        letter-spacing: 0.03em;
+      
     background-color: var(--color-accent);
     color: var(--color-white);
     border: none;
+}
+
+.options-name {
+       font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+        color: var(--color-main-dark);
+}
+
+.options-addition {
+   font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
 }
    
